# OBS-Floating-Ball

./: .gitignore  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  build.ps1  main.py  pyproject.toml  release_v0.2.0.ps1
src/obs_floating_controller/: __init__.py  annotation.py  auth.py  config.py  dialogs.py  floating_bar.py  i18n.py  logging_util.py  main.py  models.py  obs_websocket.py  platform_windows.py  settings_dialog.py  theme.py  visibility.py
tests/: test_auth.py  test_config.py  test_controller_logic.py  test_dialogs.py  test_floating_bar.py  test_i18n.py  test_models.py  test_obs_integration.py  test_output_dedupe.py  test_platform_windows.py  test_recent_recordings.py  test_settings_dialog.py  test_visibility.py
tools/: generate_icon.py
