[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "obs-floating-controller"
version = "0.1.0"
description = "OBS Floating Ball recording controller"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "websockets>=13.0",
    "pyinstaller>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
